[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/kenvector_future.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://fonts/ui_theme.tres" type="Theme" id=2]
[ext_resource path="res://src/objects/screens/Pause.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 26
outline_size = 1
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[node name="Pause" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.00012207
rect_min_size = Vector2( 1280, 720 )
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1280, 720 )
color = Color( 0, 0, 0, 0.321569 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="PauseOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -159.0
margin_top = -120.0
margin_right = 159.0
margin_bottom = -67.0
custom_fonts/font = SubResource( 1 )
text = "Paused"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PauseOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -50.0
margin_right = 100.0
margin_bottom = 50.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonRetry" type="Button" parent="PauseOverlay/VBoxContainer"]
margin_right = 200.0
margin_bottom = 46.0
size_flags_vertical = 3
theme = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Restart"

[node name="ButtonQuit" type="Button" parent="PauseOverlay/VBoxContainer"]
margin_top = 54.0
margin_right = 200.0
margin_bottom = 100.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "Quit"
[connection signal="button_up" from="PauseOverlay/VBoxContainer/ButtonRetry" to="." method="_on_ButtonRetry_button_up"]
[connection signal="button_up" from="PauseOverlay/VBoxContainer/ButtonQuit" to="." method="_on_ButtonQuit_button_up"]
